crates/lang-parse/tests/snapshots/parser__parser_function.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0xfccac1e8a6fd17e5",
        output_hash: "0x4a3ba789cd039c6",
        tree: (
            span: (
                start: 0,
                end: 46,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 46,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [
                    (Function((
                        span: (
                            start: 0,
                            end: 46,
                        ),
                        keyword_span: (
                            start: 0,
                            end: 2,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        doc: (
                            span: (
                                start: 0,
                                end: 46,
                            ),
                            lines: [],
                        ),
                        attr: ([]),
                        vis: None,
                        id: (
                            span: (
                                start: 3,
                                end: 6,
                            ),
                            name: "foo",
                        ),
                        parameters: (
                            span: (
                                start: 7,
                                end: 27,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            parameters: [
                                (
                                    span: (
                                        start: 7,
                                        end: 27,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([
                                            Comment((
                                                span: (
                                                    start: 17,
                                                    end: 27,
                                                ),
                                                inner: MultiLine("test"),
                                            )),
                                        ]),
                                    ),
                                    doc: (
                                        span: (
                                            start: 7,
                                            end: 7,
                                        ),
                                        lines: [],
                                    ),
                                    attr: ([]),
                                    id: (
                                        span: (
                                            start: 7,
                                            end: 8,
                                        ),
                                        name: "a",
                                    ),
                                    ty: Some(Single((
                                        span: (
                                            start: 10,
                                            end: 16,
                                        ),
                                        name: "Length",
                                    ))),
                                    default: None,
                                ),
                            ],
                        ),
                        return_type: Some(Single((
                            span: (
                                start: 32,
                                end: 38,
                            ),
                            name: "Length",
                        ))),
                        body: (
                            span: (
                                start: 39,
                                end: 46,
                            ),
                            statements: (
                                span: (
                                    start: 40,
                                    end: 45,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                statements: [],
                                tail: Some((
                                    span: (
                                        start: 40,
                                        end: 45,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([]),
                                    ),
                                    attr: ([]),
                                    expr: BinaryOperation((
                                        span: (
                                            start: 40,
                                            end: 45,
                                        ),
                                        lhs: SymbolPath((
                                            span: (
                                                start: 40,
                                                end: 42,
                                            ),
                                            extras: (
                                                leading: ([]),
                                                trailing: ([
                                                    Whitespace((" ")),
                                                ]),
                                            ),
                                            prefix: None,
                                            parts: [
                                                (
                                                    span: (
                                                        start: 40,
                                                        end: 41,
                                                    ),
                                                    name: "a",
                                                ),
                                            ],
                                        )),
                                        op: (
                                            span: (
                                                start: 42,
                                                end: 43,
                                            ),
                                            value: Multiply,
                                        ),
                                        rhs: Literal((
                                            span: (
                                                start: 44,
                                                end: 45,
                                            ),
                                            extras: (
                                                leading: ([]),
                                                trailing: ([]),
                                            ),
                                            literal: Integer((
                                                span: (
                                                    start: 44,
                                                    end: 45,
                                                ),
                                                value: "2",
                                            )),
                                        )),
                                    )),
                                )),
                            ),
                        ),
                    )), ([])),
                ],
                tail: None,
            ),
        ),
    ),
)
---
